testsuite/tests/grammar/invalid_parserless/unref_enum_node.lkt
import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Example.Example(@Example)
}

@abstract class FooNode implements Node[FooNode] {
}

enum class Example : FooNode {
    case Null, Example
}
